--- a/multiple_page.css
+++ b/multiple_page.css
@@ -3,13 +3,6 @@
 	color: #8a6626;
 	font-family: Sora;
 }
-
-
-
-
- 
-
-
 /**.navbar {
 	display: inline;
 }
@@ -47,52 +40,38 @@
 	color: #A32F5D;
 }**/
 
-a {
-         text-decoration: none;
-        }
-        li {
-         list-style: none;
-        }
-
-        .navbar {
-         display: flex;
-         align-items: center;
-         justify-content: space-between;
-         
-        
-         
-        }
-        .nav-links a {
-         color: #8a6626;
-        }
-        
-
-        .logo img{
-             width: 200px;
-            display: inline-block;
-            float: left;
-        }
-        
-        .menu {
-         display: flex;
-         gap: 1em;
-         font-size: 18px;
-        }
-
-
-        .menu li a:hover{
-        color: #A32F5D;
+	a{
+  text-decoration: none;
+	}
+	li{
+	list-style: none;
+	}
+	.navbar {
+	  display: flex;
+	  align-items: center;
+	  justify-content: space-between;
+	  padding: 20px;
+	}
+  .nav-links a {
+    color: #8a6626;
+	}
+  .logo img{
+    width: 200px;
+    display: inline-block;
+    float: left;
     }
-
-
-        .menu li {
-         padding: 5px 14px;
-        }
-
-   
-
-
-    .hamburger {
+  .menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+    }
+	.menu li a:hover{
+    color: #A32F5D;
+    }
+  .menu li {
+    padding: 5px 14px;
+    }
+  .hamburger {
      display: none;
      font-size: 40px;
      user-select: none;
@@ -123,35 +102,20 @@ a {
      display: block;
 
     }
-
-    .hamburger {
+		.hamburger {
      display: block;
     }
-
-    .menu li a{
+		.menu li a{
         background-color: transparent;
         transition: 0.3s ease;
     }
-
-    .menu li a:hover{
+		.menu li a:hover{
         color: #A32F5D;
     }
-
 }
-
-
-
-
-
-
-
 .big-pic{
 	width: 100%;
 }
-
-
-
-
 .a-on-big-pic{
 	text-decoration: none;
 	font-family: Sora;
@@ -171,11 +135,9 @@ a {
 	text-align: center;
 	float: center;
 }
-
 .the_top{
 	margin-left: 60px;
 }
-
 .f-my{
 	float: left;
 	width: 200px;
@@ -184,96 +146,14 @@ a {
 	padding: 10px;
 	border-radius: 50px;
 	transition: 0.3s;
-
 }
-
 .f-my:hover{
 	box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2);
 	transform: scale(1.1);
-
 }
-
 .the_bot{
 	display: inline-block;
 }
-
-
-.the_footer{
-	background-color: #8a6626;
-	height: 300px;
-	display: inline-block;
-	width: 100%;
-
-
-}
-
-.the_footer h1{
-	color: #efc8b1;
-	background-color: #8a6626;
-	margin-left: 40px;	
-}
-
-.the_footer ul{
-	background-color: #8a6626;
-}
-
-.the_footer ul li h3 a{
-	color: #efc8b1;
-	background-color: #8a6626;
-}
-
-.the_footer ul li h3{
-	background-color: #8a6626;
-}
-
-.the_phone ion-icon{
-	font-size: 30px;
-	color: #efc8b1;
-	background-color: #8a6626;
-
-}
-
-.the_phone{
-	background-color: #8a6626;
-	margin-left: 500px;
-	margin-top: 50px;
-}
-
-
-.the_phone span{
-	color: #efc8b1;
-	background-color: #8a6626;
-	padding: 10px;
-}
-
-
-
-.the_email ion-icon{
-	font-size: 30px;
-	color: #efc8b1;
-	background-color: #8a6626;
-
-}
-
-.the_email{
-	background-color: #8a6626;
-	margin-left: 500px;
-	
-}
-
-
-.the_email span{
-	color: #efc8b1;
-	background-color: #8a6626;
-	padding: 10px;
-}
-
-
-
-
-
-
-
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -281,28 +161,19 @@ a {
   border-radius: 5px;
   float: left;
   margin:  25px;
-
 }
-
 .card:hover {
   box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2);
   transform: scale(1.1);
 }
-
 .card img{
   border-radius: 5px 5px 0 0;
   width: 100%; 
-  
 }
-
-
-
 .container {
   padding: 2px 16px;
   padding: 10px;
-
 }
-
 .card-in-content {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -311,12 +182,7 @@ a {
   border-radius: 5px;
   margin:  20px;
   background-image: "https://static2.bigstockphoto.com/6/2/3/large1500/326028601.jpg";
-
-
 }
-
-
-
 .card-in-content img{
   border-radius: 5px 5px 0 0;
   width: 100%; 
@@ -324,97 +190,289 @@ a {
   transition: 1s;
   transition-duration: 1.5s;
 }
-
 .container {
   padding: 2px 16px;
   padding: 10px;
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .myanmar-title{
 	font-family: Sora;
 	color: #8a6626;
 	margin-left: 50px;
 }
-
 .whole-container{
 	display: inline-block;
 }
-
-
-
-
-
-
-
-
-
-
 .vertical-line-text{
-	
 	margin-left: 600px;
 	padding: 20px;
 	border-left:  3px solid #8a6626;
 	margin-top: 200px;
-
 }
-
-
 .ingredients{
 	display: block;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
 	width: 50%;
 	border-radius: 10px;
 	float: right;
-
 }
-
 .ingredients h1{
 	padding: 10px;
 }
-
 .ingredients ul li{
 	padding: 10px;
 	color: #372800;
 }
-
-
-
-
 .direction{
 	margin: 30px;
 	width: 45%;
-
 }
-
 .first_h1{
 	text-align: center;
 }
-
-
+.the_footer{
+	background-color: #8a6626;
+	height: 400px;
+	display: inline-block;
+	width: 100%;
+	margin-top: 80px;
+}
+.copy{
+	color: #efc8b1;
+	background-color: #8a6626;
+}
+.the_footer h1{
+	color: #efc8b1;
+	background-color: #8a6626;
+	margin-left: 40px;
+}
+.the_footer ul{
+	background-color: transparent;
+	margin-left: 500px;
+	position: relative;
+	position: absolute;
+	list-style-type: none;
+}
+.the_footer ul h3{
+	color: #efc8b1;
+	background-color: transparent;
+}
+.the_footer ul li h3 a{
+	color: #efc8b1;
+	background-color: transparent;
+}
+.the_footer ul li h3{
+	background-color: #8a6626;
+}
+.the_phone ion-icon{
+	font-size: 30px;
+	color: #efc8b1;
+	background-color: #8a6626;
+}
+.the_phone{
+	background-color: #8a6626;
+	margin-left: 50px;
+}
+.the_phone span{
+	color: #efc8b1;
+	background-color: #8a6626;
+	padding: 10px;
+}
+.the_email ion-icon{
+	font-size: 30px;
+	color: #efc8b1;
+	background-color: #8a6626;
+}
+.the_email{
+	background-color: #8a6626;
+	margin-left: 50px;
+}
+.the_email span{
+	color: #efc8b1;
+	background-color: #8a6626;
+	padding: 10px;
+}
+@media screen and (min-width: 500px){
+	.the_footer ul{
+		margin-left: 0;
+		margin-top: -40px;
+	}
+	.the_footer{
+		height: 500px;
+	}
+	.BM{
+		margin-top: 205px;
+	}
+}
+@media screen and (min-width: 550px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 600px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 630px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 660px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 670px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 690px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 700px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width:  720px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 740px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 750px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 770px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 800px) {
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 820px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 840px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 860px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 880px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 900px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 920px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 940px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 950px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 960px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 980px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1000px){
+}
+@media screen and (min-width: 1020px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1040px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1060px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1080px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1120px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1160px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1200px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1210px){
+	.the_footer ul{
+		margin-top: -40px;
+	}
+}
+@media screen and (min-width: 1230px){
+	.the_footer ul{
+		margin-top: 30px;
+		margin-left: -40px;
+	}
+	.the_footer{
+		height: 300px;
+	}
+	.BM{
+		margin-top: -18px;
+	}
+}
+@media screen and (min-width: 1230px){
+	.the_footer ul{
+		margin-left: 500px;
+		margin-top: -230px;
+	}
+}
 
 
 
